--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@
             </td>
         </tr>
     </table>
-    
+    <div id="work">
+        <h1>Work</h1>
+        <div id="photos">
+            <!-- Project#1 -->
+            <a target="_blank" rel="noopener no referrer" 
+            href="https://ibb.co/g3D63kn">
+            <img src="https://i.ibb.co/g3D63kn/1.jpg"></a>
+            </a>
+            <div class="caption">Project One</div>
+
+            <!-- Project#2 -->
+            <a target="_blank" rel="noopener no referrer" 
+            href="https://ibb.co/KVnWYMt">
+            <img src="https://i.ibb.co/KVnWYMt/8.jpg"></a>
+            </a>
+            <div class="caption">Project Two</div>
+
+            <!-- Project#3 -->
+            <a target="_blank" rel="noopener no referrer" 
+            href="https://ibb.co/X3FHFhy">
+            <img src="https://i.ibb.co/X3FHFhy/10.jpg"></a>
+            </a>
+            <div class="caption">Project Three</div>
+        </div>
+    </div>
 </body>
 </html>
