--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <tr>
             <td id="navigation">
                 <a href="#work">Work</a>
-                <a href="#about">About Me</a>
+                <a href="#bio">About Me</a>
                 <a target="_blank" nrel="noopener noreffer" 
                 href="https://github.com/NayabZahra">Github</a>
                 <a href="contact">Contact</a>
@@ -58,6 +58,14 @@
             </a>
             <div class="caption">Project Three</div>
         </div>
+    </div>
+    <div id="bio">
+        <h1>About me</h1>
+        <p>
+            Hello folks! I am Nayab Tahir, currently enrolled in BS-Software Engineering semester 5.
+            <br>I am here learning about portfolio building with bootstrap. It seems new and interesting to me. <br>
+            Anyways Happy learning!
+        </p>
     </div>
 </body>
 </html>
